vendor/cargo/parameterized-macro-2.0.0/tests/ok/20_empty.rs
use parameterized_macro::parameterized;

#[parameterized(v = {})]
fn my_test(_v: i32) {}

fn main() {}
