vendor/cargo/parameterized-macro-2.0.0/tests/fail/id_already_defined.rs
use parameterized_macro::parameterized;

#[parameterized(v = { 1, 2, 3 }, v = { 1, 2, 3 })]
fn my_test(v: i32) {}

fn main() {}
